monkey-c-formatter/tests/snapshots/snapshots__function_signature_with_types.snap
---
source: tests/snapshots.rs
expression: "format(\"function foo(a as Number, b as String) as Void {}\")"
---
function foo(a as Number, b as String) as Void {}
