monkey-c-formatter/tests/snapshots/snapshots__function_static.snap
---
source: tests/snapshots.rs
expression: "format(\"class C { static function foo() {} }\")"
---
class C {
    static function foo() {}
}
