monkey-c-formatter/tests/snapshots/snapshots__has_operator.snap
---
source: tests/snapshots.rs
expression: "format(\"function f() { if (WatchUI has :WatchFaceDelegate) { foo(); } }\")"
---
function f() {
    if (WatchUI has :WatchFaceDelegate) {
        foo();
    }
}
