monkey-c-formatter/tests/snapshots/snapshots__hex_literals_preserve_casing.snap
---
source: tests/snapshots.rs
expression: "format(\"var a = 0xFFCC00; var b = 0xffcc00; var c = 0xAbCdEf;\")"
---
var a = 0xFFCC00;
var b = 0xffcc00;
var c = 0xAbCdEf;
