monkey-c-formatter/tests/snapshots/snapshots__hugged_array_keeps_its_own_trailing_comma_and_comments.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format_hugged_width(r#\"\nfunction fn() {\n    someFn([\n        \"foo\", // first\n        \"bar\",\n    ]);\n}\n\"#.trim(),\n111)"
---
function fn() {
    someFn([
        "foo", // first
        "bar",
    ]);
}
