monkey-c-formatter/tests/snapshots/snapshots__hugged_array_stays_flat_when_it_fits.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format_hugged_width(\"function fn() { someFn([1, 2, 3]); }\", 111)"
---
function fn() {
    someFn([1, 2, 3]);
}
