monkey-c-formatter/tests/snapshots/snapshots__if_else.snap
---
source: tests/snapshots.rs
expression: "format(\"function f() { if (x > 0) { return x; } else { return 0; } }\")"
---
function f() {
    if (x > 0) {
        return x;
    } else {
        return 0;
    }
}
