monkey-c-formatter/tests/snapshots/snapshots__if_long_condition_wraps_at_comparison_op.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format_width(\"function f() { if (value.length() + unit.length() <= mMaxFieldLength) { foo(); } }\",\n40,)"
---
function f() {
    if (value.length() + unit.length()
        <= mMaxFieldLength)
    {
        foo();
    }
}
