monkey-c-formatter/tests/snapshots/snapshots__if_long_condition_wraps_on_logical_and.snap
---
source: tests/snapshots.rs
expression: "format(\"function f() { if (longConditionOne > 1 \\\n             && longConditionTwo > 1 \\\n             && longConditionThree > 1) { return 1; } }\")"
---
function f() {
    if (longConditionOne > 1 && longConditionTwo > 1 && longConditionThree > 1) {
        return 1;
    }
}
